fixed format, fixed errors, added clang format

--- a/C/exercise6/Makefile
+++ b/C/exercise6/Makefile
@@ -1,19 +1,30 @@
 CC = gcc
-CFLAGS = -Wall -Wextra -std=c99 -pedantic -g # -g for debugging
+CFLAGS = -Wall -Wextra -std=c99 -pedantic -g
 
-SRC = state_machine.c
-TARGET = state_machine	
+SRC_ONE = state_machine.c
+SRC_TWO = state_machine_w_func_pointer.c
+HDR = state_machine.h
+TARGET = state_machine
 
 all: $(TARGET)
 
-$(TARGET): $(SRC)
-	$(CC) $(CFLAGS) -o $(TARGET) $(SRC)
+$(TARGET): $(SRC_ONE)
+	$(CC) $(CFLAGS) -o $(TARGET) $(SRC_ONE) $(HDR)
 
 run: $(TARGET)
 	./$(TARGET)
 
-clean:
-	rm -f $(TARGET)
+run_two: state_machine_two
+	./state_machine_two
 
-memcheck: $(TARGET)
-	valgrind --leak-check=full --show-leak-kinds=all ./$(TARGET)
+state_machine_two: $(SRC_TWO) $(HDR)
+	$(CC) $(CFLAGS) -o state_machine_two $(SRC_TWO) $(HDR)
+
+clean:
+	rm -f $(TARGET) state_machine_two
+
+memcheck_one: state_machine
+	valgrind --leak-check=full --show-leak-kinds=all ./state_machine
+
+memcheck_two: state_machine_two
+	valgrind --leak-check=full --show-leak-kinds=all ./state_machine_two
