added date structure for exercise 6

--- a/C++/exercise6/Makefile
+++ b/C++/exercise6/Makefile
@@ -1,5 +1,5 @@
 CXX = g++
-CXXFLAGS = -Wall -Weror -Wextra -std=c++17 -pedantic -g
+CXXFLAGS = -Wall -Werror -Wextra -std=c++17 -pedantic -g
 
 SRC = friends_group.cpp
 HDR = friends_group.h
