Fixed reference in exercise 5 and delete mocks

--- a/C++/exercise5/Makefile
+++ b/C++/exercise5/Makefile
@@ -5,7 +5,6 @@ SRC = state_pattern.cpp
 HDR = state_pattern.h
 
 TEST_SRC = test_state_pattern.cpp
-MOCK_HDR = mock_state_pattern.h
 TEST_BIN = state_pattern_test
 
 RUN_BIN = run_fsm
@@ -19,7 +18,7 @@ all: run
 test: $(TEST_BIN)
 	./$(TEST_BIN)
 
-$(TEST_BIN): $(TEST_SRC) $(MOCK_HDR) $(HDR)
+$(TEST_BIN): $(TEST_SRC) $(HDR)
 	$(CXX) $(CXXFLAGS) $(TEST_SRC) -lgtest -lgmock -lgtest_main -pthread -o $(TEST_BIN)
 
 run: $(SRC) $(HDR)
